# stormwater_monitoring_datasheet_extraction

./: .buildinfo  .gitignore  .gitmodules  CLI.html  MANIFEST.in  Makefile  README.md  SECURITY.md  genindex.html  index.html  modules.html  mypy.ini  objects.inv  py-modindex.html  pyrightconfig.json  reference_package.api.html  reference_package.cli.html  reference_package.html  reference_package.lib.html  search.html  searchindex.js  setup.cfg  stormwater_monitoring_datasheet_extraction.api.html  stormwater_monitoring_datasheet_extraction.cli.html  stormwater_monitoring_datasheet_extraction.html  stormwater_monitoring_datasheet_extraction.lib.db.html  stormwater_monitoring_datasheet_extraction.lib.html  stormwater_monitoring_datasheet_extraction.lib.schema.checks.html  stormwater_monitoring_datasheet_extraction.lib.schema.html
.cursor/rules/: coding-standards.mdc  contributor-guidelines.mdc  documentation-standards.mdc  environmental-workflow.mdc  git-dev-workflow.mdc  git-workflow.mdc  issue-management.mdc  pdf-processing.mdc  project-planning.mdc  rules-governance.mdc  security-practices.mdc  technical-design.mdc  testing-practices.mdc
.doctrees/: CLI.doctree  environment.pickle  index.doctree  modules.doctree  reference_package.api.doctree  reference_package.cli.doctree  reference_package.doctree  reference_package.lib.doctree  stormwater_monitoring_datasheet_extraction.api.doctree  stormwater_monitoring_datasheet_extraction.cli.doctree  stormwater_monitoring_datasheet_extraction.doctree  stormwater_monitoring_datasheet_extraction.lib.db.doctree  stormwater_monitoring_datasheet_extraction.lib.doctree  stormwater_monitoring_datasheet_extraction.lib.schema.checks.doctree  stormwater_monitoring_datasheet_extraction.lib.schema.doctree
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  SUPPORT.md
.github/workflows/: CI_CD.yml  PR_CI_CD.yml  block_workflow_mods_dispatch.yml  deploy_docs_dispatch.yml  test_install_dispatch.yml
_sources/: CLI.rst.txt  index.rst.txt  modules.rst.txt  reference_package.api.rst.txt  reference_package.cli.rst.txt  reference_package.lib.rst.txt  reference_package.rst.txt  stormwater_monitoring_datasheet_extraction.api.rst.txt  stormwater_monitoring_datasheet_extraction.cli.rst.txt  stormwater_monitoring_datasheet_extraction.lib.db.rst.txt  stormwater_monitoring_datasheet_extraction.lib.rst.txt  stormwater_monitoring_datasheet_extraction.lib.schema.checks.rst.txt  stormwater_monitoring_datasheet_extraction.lib.schema.rst.txt  stormwater_monitoring_datasheet_extraction.rst.txt
_static/: documentation_options.js
data/: field_datasheet_data_definition.json
docs/: CLI.rst  TYPECHECK_COMPARISON.md  conf.py  index.rst
src/stormwater_monitoring_datasheet_extraction/cli/: run_etl.py
src/stormwater_monitoring_datasheet_extraction/lib/: constants.py  field_datasheet_data_definition.json  load_datasheets.py
src/stormwater_monitoring_datasheet_extraction/lib/db/: api_callers.py  auth.py  read.py  tables.py
tests/: conftest.py
tests/e2e/: __init__.py  test_example.py  test_run_etl.py
tests/integration/: test_example.py
tests/unit/: conftest.py  test_db_auth.py  test_example.py  test_load_datasheets.py  test_schema.py
(+6 files in other folders)
