[metadata]
name = stormwater_monitoring_datasheet_extraction
# TODO: Reset version.
version = 0.5.31
description = A basic package setup with examples.
long_description = file: README.md
long_description_content_type = text/markdown
author = Kaleb Coberly
maintainer_email = kaleb.coberly@gmail.com
copyright = 2024, Kaleb Coberly

[options.entry_points]
console_scripts = 
    example = stormwater_monitoring_datasheet_extraction.cli.example:main

[options]
python_requires = >=3.11
package_dir=
    =src
packages=find:
install_requires =
    click
    comb_utils>=0.1.0,<1.0.0
    typeguard

[options.packages.find]
where=src

[options.extras_require]
dev =
    stormwater_monitoring_datasheet_extraction[build]
    stormwater_monitoring_datasheet_extraction[doc]
    stormwater_monitoring_datasheet_extraction[qc]
    stormwater_monitoring_datasheet_extraction[test]
    
build =
    build
    twine

doc =
    furo
    sphinx
    sphinx-autodoc-typehints
    sphinx-click

qc =
    bandit
    black
    black[jupyter]
    flake8
    flake8-annotations
    flake8-bandit
    flake8-black
    flake8-bugbear
    flake8-docstrings
    flake8-isort
    isort
    jake
    pytype
    stormwater_monitoring_datasheet_extraction[test]
    safety

test =
    coverage[toml]
    pytest
    pytest-cov