[metadata]
name = stormwater_monitoring_datasheet_extraction
version = 0.0.26
description = Extracts stormwater monitoring field observations from datasheet PDFs.
long_description = file: README.md
long_description_content_type = text/markdown
author = Kaleb Coberly
maintainer_email = kaleb.coberly@gmail.com, kris.keillor@gmail.com
copyright = 2025, Kaleb Coberly

[options]
python_requires = >=3.12
package_dir=
    =src
packages=find:
install_requires =
    click>=8.2.1,<9.0.0
    comb_utils>=0.1.0,<1.0.0
    pandera[extensions]>=0.28.0,<0.29.0
    typeguard>=4.4.4,<5.0.0

    # Scientific Python SPEC-0000 support window: https://scientific-python.org/specs/spec-0000/#support-window
    numpy>=2.0.0,<2.4.0
    pandas>=2.3.0,<2.4.0

[options.extras_require]
dev =
    stormwater_monitoring_datasheet_extraction[build]
    stormwater_monitoring_datasheet_extraction[doc]
    stormwater_monitoring_datasheet_extraction[qc]
    stormwater_monitoring_datasheet_extraction[test]
    
build =
    build
    twine
    wheel

doc =
    furo>=2025.7.19
    sphinx>=8.2.3,<9.0.0
    sphinx-autodoc-typehints>=3.2.0,<4.0.0
    sphinx-click>=6.0.0,<7.0.0

qc =
    bandit>=1.8.6
    black>=25.1.0
    flake8>=7.3.0
    flake8-annotations>=3.1.1
    flake8-bandit>=4.1.1
    flake8-black>=0.4.0
    flake8-bugbear>=24.12.12
    flake8-docstrings>=1.7.0
    flake8-isort>=6.1.2
    isort>=6.0.1
    mypy>=1.14.1
    pandas-stubs>=2.3.0
    pip-audit
    stormwater_monitoring_datasheet_extraction[test]
    safety>=3.6.1

test =
    coverage[toml]>=7.9.2
    pydantic-core>=2.41.5
    pytest>=8.4.1
    pytest-cov>=6.2.1

[options.entry_points]
console_scripts = 
    run_etl = stormwater_monitoring_datasheet_extraction.cli.run_etl:main

[options.packages.find]
where=src

[options.package_data]
stormwater_monitoring_datasheet_extraction = py.typed